--- a/src/index .html
+++ b/src/index .html
@@ -6,7 +6,7 @@
     <title>String Calculator</title>
 </head>
 <body>
-    <div id="mainDiv" class="container">
+    <div id="mainDiv" class="container main">
         <h1 id="hd1">String Calculator</h1>
         <input type="text" id="inpStr" placeholder="Enter String">
         <button type="button" id="calcBtn">Calculate</button>
