--- a/src/index .html
+++ b/src/index .html
@@ -9,9 +9,10 @@
     <div id="mainDiv" class="container main">
         <h1 id="hd1">String Calculator</h1>
         <input type="text" id="inpStr" placeholder="Enter String">
-        <button type="button" id="calcBtn">Calculate</button>
+        <button type="button" id="calcBtn" onclick="calculate()">Calculate</button>
         <div id="result"></div>
         <div id="error"></div>
     </div>
+    <script src="scripts/strCalc.js"></script>
 </body>
 </html>
