--- a/src/index .html
+++ b/src/index .html
@@ -8,11 +8,12 @@
 <body>
     <div id="mainDiv" class="container main">
         <h1 id="hd1">String Calculator</h1>
-        <input type="text" id="inpStr" placeholder="Enter String">
+        <textarea type="text" id="inpStr" placeholder="Enter String"></textarea>
         <button type="button" id="calcBtn" onclick="calculate()">Calculate</button>
-        <div id="result"></div>
         <div id="error"></div>
+        <div id="result"></div>
+        <div id="history"></div>
     </div>
-    <script src="scripts/strCalc.js"></script>
+    <script src="../src/scripts/strCalc.js"></script>
 </body>
 </html>
