clearing functionality added

--- a/src/index .html
+++ b/src/index .html
@@ -11,6 +11,7 @@
         <textarea type="text" id="inpStr" placeholder="Enter String" rows="1" cols="50"></textarea>
         <br>
         <button type="button" id="calcBtn" onclick="calculate()">Calculate</button>
+        <button type="button" id="clrTxt" onclick="clearText()">Clear</button>
         <div id="error"></div>
         <div id="result"></div>
         <div id="history">History: </div>
