--- a/src/index .html
+++ b/src/index .html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>String Calculator</title>
+    <link href="../src/styles/index.css" rel="stylesheet">
 </head>
 <body>
     <div id="mainDiv" class="container main">
         <h1 id="hd1">String Calculator</h1>
-        <textarea type="text" id="inpStr" placeholder="Enter String" rows="1" cols="50"></textarea>
+        <textarea type="text" id="inpStr" class="mb-2v pd-5" placeholder="Enter String" rows="5" cols="30"></textarea>
         <br>
-        <button type="button" id="calcBtn" onclick="calculate()">Calculate</button>
-        <button type="button" id="clrTxt" onclick="clearText()">Clear</button>
-        <div id="error"></div>
-        <div id="result"></div>
-        <div id="history">History: </div>
+        <button type="button" id="calcBtn" class="mb-2v pd-5" onclick="calculate()">Calculate</button>
+        <button type="button" id="clrTxt" class="mb-2v pd-5" onclick="clearText()">Clear</button>
+        <div id="error" class="mb-2v" style="color: rgb(255, 55, 55)"></div>
+        <div id="result" class="mb-2v" style="color: lightgreen;"></div>
+        <div id="history" class="mb-2v" style="color: whitesmoke">History: </div>
     </div>
     <script src="../src/scripts/strCalc.js"></script>
 </body>
