--- a/src/index .html
+++ b/src/index .html
@@ -9,10 +9,10 @@
 <body>
     <div id="mainDiv" class="container main">
         <h1 id="hd1">String Calculator</h1>
-        <textarea type="text" id="inpStr" class="mb-2v pd-5" placeholder="Enter String" rows="5" cols="30"></textarea>
+        <textarea type="text" id="inpStr" class="mb-2v pd" placeholder="Enter String" rows="5" cols="30"></textarea>
         <br>
-        <button type="button" id="calcBtn" class="mb-2v pd-5" onclick="calculate()">Calculate</button>
-        <button type="button" id="clrTxt" class="mb-2v pd-5" onclick="clearText()">Clear</button>
+        <button type="button" id="calcBtn" class="bdr mb-2v pd" onclick="calculate()">Calculate</button>
+        <button type="button" id="clrTxt" class="bdr mb-2v pd" onclick="clearText()">Clear</button>
         <div id="error" class="mb-2v" style="color: rgb(255, 55, 55)"></div>
         <div id="result" class="mb-2v" style="color: lightgreen;"></div>
         <div id="history" class="mb-2v" style="color: whitesmoke">History: </div>
